# git2rag

./: .clinerules  .gitignore  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml
docs/: index.md  indexing_pipeline.md  quickstart.md
examples/: README.md  index_neuroconv.ipynb
mcp/semantic_search_server/: README.md  pyproject.toml  test_search.py  test_server.py
mcp/semantic_search_server/src/: config.py  main.py  search.py
src/git2rag/: __init__.py  chunking.py  content_parser.py  embeddings.py  indexer.py  search.py  summarizer.py
src/git2rag/chunking/: __init__.py  base.py  chunking_old.py  llm_chunking.py
src/git2rag/clients/: __init__.py  qdrant.py
src/git2rag/utils/: file.py
src/repo_indexer/: __init__.py  chunking.py  cli.py  embeddings.py  indexer.py  summarizer.py
src/repo_indexer/clients/: qdrant.py
tests/: test_chunking.py  test_chunking_strategies.py  test_content_parser.py  test_embeddings.py  test_indexer.py  test_indexer_summarization.py  test_qdrant_client.py  test_summarizer.py
